Fixed links going out of page margin on small mobile display

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -43,6 +43,8 @@ hr {
 a {
   color: $bg;
   text-decoration: none;
+  word-wrap: break-word;
+  white-space: pre-wrap;
 }
 a:hover {
   color: $bg2;
